--- a/blog/templates/navbar.html
+++ b/blog/templates/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="#">Меню</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -10,7 +10,7 @@
             <a class="nav-link" aria-current="page" href="{{ url_for('index') }}">Главная страница</a>
           </li>
           <li class="nav-item">
-            {% for (endpoint, label) in [('users_app.list', 'Пользователи')] %}
+            {% for (endpoint, label) in [('users_app.list', 'Пользователи'), ('articles_app.list', 'Статьи')] %}
             <a href="{{ url_for(endpoint) }}"
             class="nav-link {% if request.endpoint == endpoint -%}active{%- endif %}">{{ label }}</a>{% endfor %}
           </li>
