--- a/blog/templates/articles/details.html
+++ b/blog/templates/articles/details.html
@@ -3,8 +3,9 @@
 Article #{{ article_id }}
 {% endblock %}
 {% block body %}
-<h1>{{ article_name }}</h1>
+<h1>{{ article_text }}</h1>
+<h1><a href="{{ url_for('users_app.details', user_id=article_user_id )}}">Пользователь {{ article_user_id }}</a></h1>
 <div>
-    <a href="{{ url_for('articles_app.list') }}">Вернуться к списку пользователей</a>
+    <a href="{{ url_for('articles_app.list') }}">Вернуться к списку статей</a>
 </div>
 {% endblock %}
