--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -5,5 +5,12 @@ Index Page
 {% endblock %}
 
 {% block body %}
-<h1>Главная страница</h1>
+<h1>
+    Hello
+    {% if current_user.is_authenticated %}
+    {{ current_user.username }}
+    {% else %}
+    anon
+    {% endif %}
+    </h1>    
 {% endblock %}
