--- a/blog/templates/navbar.html
+++ b/blog/templates/navbar.html
@@ -14,6 +14,17 @@
             <a href="{{ url_for(endpoint) }}"
             class="nav-link {% if request.endpoint == endpoint -%}active{%- endif %}">{{ label }}</a>{% endfor %}
           </li>
+          <div class="navbar-nav ms-auto">
+            {% if current_user.is_authenticated %}
+            <a class="nav-link" href="{{ url_for('auth_app.logout') }}">Logout</a>
+            {% else %}
+            <a href="{{ url_for('auth_app.login') }}"
+            class="nav-link {% if request.endpoint == 'login' -%}active{%- endif %}">
+            Login
+            </a>
+            {% endif %}
+            </div>
+          </li>
         </ul>
       </div>
     </div>
