--- a/blog/templates/articles/details.html
+++ b/blog/templates/articles/details.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
 {% block title %}
-Article #{{ article_id }}
+Article #{{ article.id }}: {{ article.title }}
 {% endblock %}
 {% block body %}
-<h1>{{ article_text }}</h1>
-<h1><a href="{{ url_for('users_app.details', user_id=article_user_id )}}">Пользователь {{ article_user_id }}</a></h1>
+<h1>{{ article.title }}</h1>
 <div>
-    <a href="{{ url_for('articles_app.list') }}">Вернуться к списку статей</a>
+<p>{{ article.body }}</p>
+<div>Published {{ article.dt_created }}</div>
+<div>by {{ article.author.user.username }}</div>
 </div>
 {% endblock %}
