--- a/blog/templates/navbar.html
+++ b/blog/templates/navbar.html
@@ -10,15 +10,15 @@
             <a class="nav-link" aria-current="page" href="{{ url_for('index') }}">Главная страница</a>
           </li>
           <li class="nav-item">
-            {% for (endpoint, label) in [('users_app.list', 'Пользователи'), ('articles_app.list', 'Статьи')] %}
+            {% for (endpoint, label) in [('users_app.list', 'Пользователи'), ('articles_app.list', 'Статьи'), ('authors_app.list', 'Авторы'),] %}
             <a href="{{ url_for(endpoint) }}"
             class="nav-link {% if request.endpoint == endpoint -%}active{%- endif %}">{{ label }}</a>{% endfor %}
           </li>
           <div class="navbar-nav ms-auto">
             {% if current_user.is_authenticated %}
-            <a class="nav-link" href="{{ url_for('auth_app.logout') }}">Logout</a>
+            <a class="nav-link" href="{{ url_for('auth_app.logout') }}">Выход</a>
             {% else %}
-            {% for (endpoint, label) in [('auth_app.login', 'Login'), ('auth_app.register', 'Register')] %}
+            {% for (endpoint, label) in [('auth_app.login', 'Вход'), ('auth_app.register', 'Регистрация')] %}
             <a href="{{ url_for(endpoint) }}"
             class="nav-link {% if request.endpoint == endpoint -%}active{%- endif %}">
             {{ label }}
